/*
 * $Id: ChangeLog,v 1.1997 2004/01/05 21:17:56 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-06 02:50 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * contrib/pgsql/Makefile
    ! fixed include path
  ! contrib/pgsql/postgres.c
    ! fixed compilation error
    ITEM -> PHB_ITEM
    
2004-01-05 13:15 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbver.h
  * bin/!pack_bin.bat
  * bin/!pack_src.bat
  * xharbour.spec
    * Changed to 0.92.0

2004-01-05 16:06 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makallvc.bat
  * makallbc.bat
    + contrib/firebird
    + contrib/pgsql
  * source/rtl/gtwin/gtwin.c
    * fixed up comments on tone.

2004-01-05 19:50 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * bin/bld.bat
    * add -lgdi32 -lcomctl32 to mingw32 for gtwvt
  * source/rtl/gtwvt/gtwvt.c
    * add HB_OS_WIN_32_USED and changed includes order
      to fix mingw32 warnings
  * source/rtl/filesys.c
    * add a __WATCOMC__ to fix OpenWatcom/W32 ferror()
  * config/bsd/gcc.cf
  * config/dos/djgpp.cf
  * config/linux/gcc.cf
  * config/w32/mingw32.cf
    * add support of HB_USER_LIBS to link users libs
  * config/prg.cf
  * config/rules.cf
  + config/dos/clipper.cf
    * add support of HB_COMPILER=clipper to build clipper applications

2004-01-05 16:28 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    * Now the system implements twin process coordination; one process
      manages the window and the other (bound to the xharbour VM) manages
      the buffer.

2004-01-05 05:50 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    ! GT is now initialized only after screen output is done
    * internal api rationlaization